# fifth-tower-project

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
src/: app.rs  main.rs
src/ipc/: mod.rs
src/page/: mod.rs
src/page/component/: blank.rs  run_status_icon.rs
src/page/component/chat/: avatar.rs  chat_input.rs  chat_list.rs  index.rs  message.rs  mod.rs  user_list.rs
src/page/hotel/: mod.rs
src/page/hotel/room/: index.rs  mod.rs  select_or_join_step.rs  started_step.rs
src/page/note/: add_dir.rs  add_file.rs  index.rs  left_side.rs  mod.rs  update_dir.rs
src/page/note/detail/: index.rs  mod.rs  note.rs
src/page/password/: add_file.rs  detail.rs  index.rs  input_pin.rs  left_side.rs  mod.rs  set_pin.rs  update_file.rs
src/page/wishing/: add_wishing.rs  index.rs  mod.rs
src/service/: chat.rs  mod.rs  vip_check.rs
