[package]
name = "tower-project"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos.workspace = true
leptos_router.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

codee.workspace = true
serde_json.workspace = true
multimap.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
icondata_core.workspace = true
leptos-use = { workspace = true, features = ["watch_debounced"] }

send_wrapper.workspace = true
tower = { workspace = true, features = [
    "tauri-web",
    "web-hotkey",
    "script-model",
] }
rust_decimal = { workspace = true, features = ["macros"] }
getrandom.workspace = true
futures = { workspace = true }
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
matchbox_socket.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = []

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
multimap = "0.10.0"
codee = { version = "0.3", features = ["bincode_serde"] }
base64 = "0.22"
bytes = "1"


tower = { path = "../fifth-tower" }
rust_decimal = "1.37"


leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_icons = { version = "0.5" }
leptos-use = { version = "0.15.8", features = ["watch_debounced"] }
icondata = { version = "0.5", default-features = false, features = [
    "ant-design-icons",
] }
icondata_core.version = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

send_wrapper = "0.6.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

futures = "0.3"
futures-timer = "3"
matchbox_socket = "0.12"
